--- a/unpackaged/main/default/classes/SOM_InvoiceDocumentController.cls
+++ b/unpackaged/main/default/classes/SOM_InvoiceDocumentController.cls
@@ -47,7 +47,7 @@ global with sharing class SOM_InvoiceDocumentController {
         List<FulfillmentOrder> fulfillmentOrder = [SELECT Invoice.TotalAmount, Invoice.TotalAmountWithTax, Invoice.TotalTaxAmount, Invoice.InvoiceDate, Invoice.InvoiceNumber__c, Invoice.DocumentNumber, OrderSummary.Account.Name, OrderSummary.OrderNumber, 
         FulfilledToName, FulfilledToCity, FulfilledToPostalCode, FulfilledToStreet, FulfilledToState, FulfilledToCountry, OrderSummary.BillingCity,OrderSummary.BillingState, OrderSummary.BillingPostalCode, OrderSummary.BillingContactFirstName__c , OrderSummary.BillingContactLastName__c,
         OrderSummary.BillingStreet, OrderSummary.BillingCountry, OrderSummaryId, CurrencyIsoCode, (SELECT id, TrackingNumber FROM FulfillmentOrderShipments) FROM FulfillmentOrder WHERE InvoiceId= :invoiceId];
-        List<InvoiceLine> invoiceLines = [SELECT Id, Type, TaxRate,TaxAmount, Product2.Description, Quantity, UnitPrice, GrossUnitPrice, ChargeAmountWithTax, ChargeTaxAmount, TYPEOF ReferenceEntityItem WHEN OrderItemSummary THEN hsCode__c,hsCodeDescription__c,COO__c END FROM InvoiceLine WHERE InvoiceId = :invoiceId];
+        List<InvoiceLine> invoiceLines = [SELECT Id, Type, TaxRate,TaxAmount, Product2.Description, Quantity, UnitPrice, GrossUnitPrice, ChargeAmountWithTax, ChargeTaxAmount, TYPEOF ReferenceEntityItem WHEN OrderItemSummary THEN hsCode__c,hsCodeDescription__c,COO__c, Description END FROM InvoiceLine WHERE InvoiceId = :invoiceId];
         invDoc.invoiceDate    = isCorrectiveInvoice ? DateTime.newInstance(cInvoice.CreatedDate.year(), cInvoice.CreatedDate.month(), cInvoice.CreatedDate.day()).format('yyyy-MM-dd') : DateTime.newInstance(fulfillmentOrder.get(0).Invoice.InvoiceDate.year(), fulfillmentOrder.get(0).Invoice.InvoiceDate.month(), fulfillmentOrder.get(0).Invoice.InvoiceDate.day()).format('yyyy-MM-dd');
         invDoc.documentNumber = isCorrectiveInvoice ? cInvoice.Name : fulfillmentOrder.get(0).Invoice.InvoiceNumber__c;
         
@@ -159,7 +159,7 @@ global with sharing class SOM_InvoiceDocumentController {
         for(InvoiceLine invoiceLine:invoiceLines) {
             if (invoiceLine.Type.equalsIgnoreCase(SOM_Constants.INVOICE_LINE_TYPE_CHARGE) && invoiceLine.Quantity>0) {
                 InvoiceLineItem lineItem = new InvoiceLineItem();
-                lineItem.itemDescription = invoiceLine.Product2.Description;
+                //lineItem.itemDescription = invoiceLine.Product2.Description;
                 lineItem.quantity        = invoiceLine.Quantity;
                 lineItem.netAmount       = getTotalFormatted(invoiceLine.UnitPrice);
                 lineItem.vat             = getTotalFormatted(invoiceLine.ChargeTaxAmount);
@@ -170,6 +170,7 @@ global with sharing class SOM_InvoiceDocumentController {
                     lineItem.hsCode            = orderItem.hsCode__c;
                     lineItem.hsCodeDescription = orderItem.hsCodeDescription__c;
                     lineItem.coo               = orderItem.COO__c;
+                    lineItem.itemDescription   = orderItem.Description;
                     List<String> serialNumbers = serialNumbersMap.get(orderItem.Id);
                     if (serialNumbers != null) {
                         lineItem.serialNumber = String.join(serialNumbers, CONCAT_CHARACTER);
