--- a/unpackaged/main/default/translations/ar.translation-meta.xml
+++ b/unpackaged/main/default/translations/ar.translation-meta.xml
@@ -49,6 +49,10 @@
         <name>SOM_Confirmation_Resend_Transactional_Email</name>
     </customLabels>
     <customLabels>
+        <label><!-- TNP_APINameAccount --></label>
+        <name>TNP_APINameAccount</name>
+    </customLabels>
+    <customLabels>
         <label><!-- profileName_StoreUser --></label>
         <name>profileName_StoreUser</name>
     </customLabels>
