--- a/unpackaged/main/default/classes/SOM_InvoiceDocumentController.cls
+++ b/unpackaged/main/default/classes/SOM_InvoiceDocumentController.cls
@@ -47,7 +47,8 @@ global with sharing class SOM_InvoiceDocumentController {
         List<FulfillmentOrder> fulfillmentOrder = [SELECT Invoice.TotalAmount, Invoice.TotalAmountWithTax, Invoice.TotalTaxAmount, Invoice.InvoiceDate, Invoice.InvoiceNumber__c, Invoice.DocumentNumber, OrderSummary.Account.Name, OrderSummary.OrderNumber, 
         FulfilledToName, FulfilledToCity, FulfilledToPostalCode, FulfilledToStreet, FulfilledToState, FulfilledToCountry, OrderSummary.BillingCity,OrderSummary.BillingState, OrderSummary.BillingPostalCode, OrderSummary.BillingContactFirstName__c , OrderSummary.BillingContactLastName__c,
         OrderSummary.BillingStreet, OrderSummary.BillingCountry, OrderSummaryId, CurrencyIsoCode, (SELECT id, TrackingNumber FROM FulfillmentOrderShipments) FROM FulfillmentOrder WHERE InvoiceId= :invoiceId];
-        List<InvoiceLine> invoiceLines = [SELECT Id, Type, TaxRate,TaxAmount, Product2.Description, Quantity, UnitPrice, GrossUnitPrice, ChargeAmountWithTax, ChargeTaxAmount, TYPEOF ReferenceEntityItem WHEN OrderItemSummary THEN hsCode__c,hsCodeDescription__c,COO__c, Description END FROM InvoiceLine WHERE InvoiceId = :invoiceId];
+        List<InvoiceLine> invoiceLines = [SELECT Id, Type, TaxRate,TaxAmount, Product2.Description, Quantity, UnitPrice, GrossUnitPrice, ChargeAmountWithTax, ChargeTaxAmount, TYPEOF ReferenceEntityItem WHEN OrderItemSummary THEN hsCode__c,hsCodeDescription__c,COO__c, Description, LineNumber END FROM InvoiceLine WHERE InvoiceId = :invoiceId];
+        
         invDoc.invoiceDate    = isCorrectiveInvoice ? DateTime.newInstance(cInvoice.CreatedDate.year(), cInvoice.CreatedDate.month(), cInvoice.CreatedDate.day()).format('yyyy-MM-dd') : DateTime.newInstance(fulfillmentOrder.get(0).Invoice.InvoiceDate.year(), fulfillmentOrder.get(0).Invoice.InvoiceDate.month(), fulfillmentOrder.get(0).Invoice.InvoiceDate.day()).format('yyyy-MM-dd');
         invDoc.documentNumber = isCorrectiveInvoice ? cInvoice.Name : fulfillmentOrder.get(0).Invoice.InvoiceNumber__c;
         
@@ -175,6 +176,8 @@ global with sharing class SOM_InvoiceDocumentController {
                     if (serialNumbers != null) {
                         lineItem.serialNumber = String.join(serialNumbers, CONCAT_CHARACTER);
                     }
+                    // populate new attribute on InvoiceLineItem
+                    lineItem.lineNumber        = orderItem.LineNumber;
                 }
                 lineItem.itemNumber = counter;
 
@@ -182,7 +185,8 @@ global with sharing class SOM_InvoiceDocumentController {
                 counter++;
             }
         }
-
+		//sort
+		lineItems.sort();
         return lineItems;
     }
 
@@ -253,8 +257,9 @@ global with sharing class SOM_InvoiceDocumentController {
         public String state {get; set;}
         public String country {get; set;}
     }
-
-    global with sharing class InvoiceLineItem{
+	
+    //  implements Comparable
+    global with sharing class InvoiceLineItem implements Comparable {
         public String  itemDescription {get; set;} //Product2 : description
         public Integer itemNumber {get; set;}//
         public String  serialNumber {get; set;} //serialnumber on shipping object
@@ -266,5 +271,35 @@ global with sharing class SOM_InvoiceDocumentController {
         public String  vat {get; set;} //InvoiceLine: ChargeTaxAmount
         public String  grossAmount {get; set;} //invoiceLine : TotalAmountWithTax /Quantity
         public String  total {get; set;} //invoiceLine : TotalAmountWithTax
+        //add number LineNumber
+        public Integer lineNumber {get; set;}
+       
+        // compareTo method
+		public Integer compareTo(Object compareTo) {
+            // Cast argument to InvoiceLineItem
+            InvoiceLineItem compareToOppy = (InvoiceLineItem)compareTo;
+            
+            // The return value of 0 indicates that both elements are equal.
+            Integer returnValue = 0;
+            if ((this.LineNumber == null) && (compareToOppy.LineNumber == null)) {
+                // both objects have null LineNumber
+                returnValue = 0;
+            } else if ((this.LineNumber == null) && (compareToOppy.LineNumber != null)){
+                // nulls-first implementation
+                returnValue = -1;
+            } else if ((this.LineNumber != null) && (compareToOppy.LineNumber == null)){
+                // nulls-first implementation
+                returnValue = 1;
+            } else if (this.LineNumber > compareToOppy.LineNumber) {
+                // Set return value to a positive value.
+                returnValue = 1;
+            } else if (this.LineNumber < compareToOppy.LineNumber) {
+                // Set return value to a negative value.
+                returnValue = -1;
+            } 
+            return returnValue;
+        }
+
+          
     }
 }
